# ARGeo

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/assimp/: .editorconfig  .gitignore  .ninja_deps  .ninja_log  assimp.pc  build.ninja  revision.h  rules.ninja
app/assimp/code/: ColladaExporter.cpp  ColladaExporter.h  OgreBinarySerializer.cpp  StringUtils.h  XFileParser.cpp  glTFAsset.h
app/assimp/contrib/zlib/: zlib.pc
app/assimp/lib/Debug/: assimp-vc140-mt.exp
app/assimp/samples/SimpleTexturedOpenGL/SimpleTexturedOpenGL/src/: model_loading.cpp
app/assimp/test/gtest/src/gtest-build/: CTestTestfile.cmake
app/assimp/test/gtest/src/gtest-stamp/: gtest-build-Debug.cmake  gtest-build-MinSizeRel.cmake  gtest-build-RelWithDebInfo.cmake  gtest-build-Release.cmake  gtest-configure-Release.cmake  gtest-download-Debug.cmake
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ARBuffer.cpp  AssimpIOStream.cpp  AssimpIOSystem.cpp  Billboard.cpp  BillboardCollection.cpp  BillboardGraphics.cpp  BillboardVisualizer.cpp  BoundingSphere.cpp  BufferGL.cpp  Camera.cpp  CameraEyeHighModelCoordinatesUniform.cpp  CameraEyeHighModelCoordinatesUniformFactory.cpp  CameraEyeLowModelCoordinatesUniform.cpp  CameraEyeLowModelCoordinatesUniformFactory.cpp  CameraEyeUniform.cpp  CameraEyeUniformFactory.cpp  CameraLightPositionUniform.cpp  CameraLightPositionUniformFactory.cpp  ClearCommand.cpp  ClipmapLevel.cpp  ClipmapTerrain.cpp  ClipmapUpdate.cpp  ClipmapUpdater.cpp  ColorAttachmentsGL.cpp  CubeMapFaceGL.cpp  CubeMapGL.cpp  CullingVolume.cpp  CurrentFrustumUniform.cpp  CurrentFrustumUniformFactory.cpp  DepthPlane.cpp  DrawCommand.cpp  Ellipsoid.cpp  EllipsoidTangentPlane.cpp  Entity.cpp  EntityCollection.cpp  FenceGL.cpp  Font.cpp  FragmentOutputsGL.cpp  FrameBufferGL.cpp  FrameState.cpp  (+150 more)
app/src/main/cpp/android/: AndroidNativeAppGlue.c  Application.cpp  ArgeoActivity.cpp  ArgeoFragment.cpp  ArgeoNativeActivity.cpp  ArgeoTest.cpp  Bitmap.cpp  Bootstrap.cpp  ByteArray.cpp  ClassRegistry.cpp  ContextEGL.cpp  Device.cpp  DevicePoseCameraController.cpp  EmbeddedResources.cpp  Engine.cpp  EventLoop.cpp  ExtensionsES.cpp  GestureDetector.cpp  InputManager.cpp  JNIArgeoActivity.cpp  JNIArgeoFragment.cpp  JNIBillboardGraphics.cpp  JNICamera.cpp  JNIDevicePoseCameraController.cpp  JNIEllipsoidTangentPlane.cpp  JNIEllipsoidTransformations.cpp  JNIEngine.cpp  JNIEntity.cpp  JNIEntityCollection.cpp  JNIGeocentric3D.cpp  JNIGeodetic3D.cpp  JNIHelper.cpp  JNIIGraphics.cpp  JNIITerrain.cpp  JNIMatrix4D.cpp  JNIModelGraphics.cpp  JNIPlaneGraphics.cpp  JNIPolylineGraphics.cpp  JNIQuaternion.cpp  JNIScene.cpp  (+20 more)
app/src/main/cpp/android/include/: ActivityHandler.h  ActivityStatus.h  AndroidNativeAppGlue.h  Application.h  Argeo.h  ArgeoActivity.h  ArgeoFragment.h  ArgeoNativeActivity.h  ArgeoTest.h  Bootstrap.h  ByteArray.h  ClassRegistry.h  ContextEGL.h  Core.h  DevicePoseCameraController.h  Engine.h  EventLoop.h  ExtensionsES.h  GestureDetector.h  JNIArgeoActivity.h  JNIArgeoFragment.h  JNIBillboardGraphics.h  JNICamera.h  JNIDevicePoseCameraController.h  JNIEllipsoidTangentPlane.h  JNIEllipsoidTransformations.h  JNIEngine.h  JNIEntity.h  JNIEntityCollection.h  JNIGeocentric3D.h  JNIGeodetic3D.h  JNIHelper.h  JNIIGraphics.h  JNIITerrain.h  JNIMatrix4D.h  JNIModelGraphics.h  JNIPlaneGraphics.h  JNIPolylineGraphics.h  JNIQuaternion.h  JNIScene.h  (+28 more)
app/src/main/cpp/include/: ARBuffer.h  Action.h  ActionButton.h  ArgeoMath.h  AssimpIOStream.h  AssimpIOSystem.h  AutomaticUniformFactory.h  AutomaticUniformFactoryCollection.h  Axis.h  Billboard.h  BillboardCollection.h  BillboardGraphics.h  BillboardShaders.h  BillboardVisualizer.h  Bitmap.h  BitmapAlgorithms.h  BlendEquation.h  Blending.h  BlittableRGBA.h  BoundingRectangle.h  BoundingSphere.h  BoundingVolume.h  BoxTessellator.h  Buffer.h  BufferAccess.h  BufferGL.h  BufferHint.h  BufferTarget.h  Camera.h  CameraChangedListener.h  CameraEyeHighModelCoordinatesUniform.h  CameraEyeHighModelCoordinatesUniformFactory.h  CameraEyeLowModelCoordinatesUniform.h  CameraEyeLowModelCoordinatesUniformFactory.h  CameraEyeUniform.h  CameraEyeUniformFactory.h  CameraLightPositionUniform.h  CameraLightPositionUniformFactory.h  CameraMoveListener.h  ClearBuffers.h  (+363 more)
app/src/main/java/vyglab/argeo/app/: FragmentTestActivity.java  (+9 more)
app/src/main/res/anim/: fab_open.xml
app/src/main/res/drawable/: ic_image_aspect_ratio.xml  ic_list_poi.xml  ic_menu_accept.xml  ic_menu_accept_outline.xml  ic_menu_add_photo.xml  ic_menu_argeo_logo.xml  ic_menu_beenhere.xml  ic_menu_broken_image.xml  ic_menu_burstmode.xml  ic_menu_camera.xml  ic_menu_camera_rotated.xml  ic_menu_cancel.xml  ic_menu_cancel_outline.xml  ic_menu_cancel_outline_white.xml  ic_menu_chevron_double_right.xml  ic_menu_database.xml  ic_menu_database_minus.xml  ic_menu_down.xml  ic_menu_flag.xml  ic_menu_gallery.xml  ic_menu_image.xml  ic_menu_info_outline.xml  ic_menu_left.xml  ic_menu_manage.xml  ic_menu_map_marker_plus.xml  ic_menu_memory.xml  ic_menu_minus.xml  ic_menu_open_in_new.xml  ic_menu_pencil.xml  ic_menu_pencil_box_outline.xml  ic_menu_photo_size_select_large.xml  ic_menu_picture_in_picture.xml  ic_menu_plane.xml  ic_menu_plus.xml  ic_menu_plus_circle_outline.xml  ic_menu_poi_simple.xml  ic_menu_pois.xml  ic_menu_right.xml  ic_menu_rotate_3d.xml  ic_menu_screenshot.xml  (+10 more)
app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  argeo_activity.xml  argeo_fragment.xml  content_main.xml  dialog_sensor_settings.xml  fragment_plane.xml  fragment_plane_details.xml  fragment_plane_list.xml  fragment_poi.xml  fragment_poi_list.xml  fragment_terrain.xml  fragment_test_activity.xml  fragment_ttarview.xml  fragment_ttarview_details.xml  fragment_ttarview_list.xml  nav_header_main.xml  nav_switch.xml  plane_list_item.xml  poi_list_item.xml  right_menu_plane.xml  right_menu_poi.xml  right_menu_terrain.xml  ttarview_list_item.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  preferences.xml  strings.xml  styles.xml
(+228 files in other folders)
